backend/deployments/k8s/base/wallet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krypton-wallet-deployment
  labels:
    app: krypton-wallet-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: krypton-wallet-deployment
  template:
    metadata:
      name: krypton-wallet-deployment
      labels:
        app: krypton-wallet-deployment
    spec:
      restartPolicy: Always
      containers:
        - name: krypton-wallet-deployment
          image: golang:1.24.5-alpine
          workingDir: /go/src/wallet
#          command: [ "sh", "-c", "go run main.go" ]
          tty: true
          stdin: true
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: wallet-code
              mountPath: /go/src/wallet
            - name: pkg-code
              mountPath: /go/src/pkg
            - name: go-mod-cache
              mountPath: /go/pkg/mod
            - name: go-build-cache
              mountPath: /root/.cache/go-build
      volumes:
        - name: wallet-code
          hostPath:
            path: /home/omides248/krypton/backend/wallet
            type: Directory
        - name: pkg-code
          hostPath:
            path: /home/omides248/krypton/backend/pkg
            type: Directory
        - name: go-mod-cache
          hostPath:
            path: /var/lib/krypton/cache/go-mod
            type: DirectoryOrCreate
        - name: go-build-cache
          hostPath:
            path: /var/lib/krypton/cache/go-build
            type: DirectoryOrCreate
